--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/menu.js"></script>
   </head>
 
-  <body>
+  <body class="front">
     <!--Navigationsbar og infoboks-->
     <header>
       <!--infoboks der indeholder links til login,
@@ -93,25 +93,32 @@
       </figure>
       <article>
         <section>
-          <figure>
-            <span>Bliv inspireret til</span>
-            <h2>Stuen</h2>
+          <figure class="one">
+            <div class="text-wrapper">
+              <span>Bliv inspireret til</span>
+              <h2>Stuen</h2>
+            </div>
           </figure>
-          <figure>
-            <span>Indret dit</span>
-            <h2>Soveværelset</h2>
+          <figure class="two">
+            <div class="text-wrapper">
+              <span>Indret dit</span>
+              <h2>Soveværelset</h2>
+            </div>
           </figure>
         </section>
         <section>
-          <figure>
-            <span>Mangler du inspiration til</span>
-            <h2>Hjemmet</h2>
+          <figure class="three">
+            <div class="text-wrapper">
+              <span>Mangler du inspiration til</span>
+              <h2>Hjemmet</h2>
+            </div>
           </figure>
-          <figure>
-            <span>Pynt hjemmet med vores</span>
-            <h2>Tilbehør</h2>
+          <figure class="four">
+            <div class="text-wrapper">
+              <span>Pynt hjemmet med vores</span>
+              <h2>Tilbehør</h2>
+            </div>
           </figure>
-
         </section>
       </article>
     </main>
