Under elementerne oprettet

--- a/index.html
+++ b/index.html
@@ -93,32 +93,40 @@
       </figure>
       <article>
         <section>
+          <a href="#">
           <figure class="one">
             <div class="text-wrapper">
               <span>Bliv inspireret til</span>
               <h2>Stuen</h2>
             </div>
           </figure>
+        </a>
+          <a href="#">
           <figure class="two">
             <div class="text-wrapper">
               <span>Indret dit</span>
               <h2>Soveværelset</h2>
             </div>
           </figure>
+        </a>
         </section>
         <section>
+          <a href="#">
           <figure class="three">
             <div class="text-wrapper">
               <span>Mangler du inspiration til</span>
               <h2>Hjemmet</h2>
             </div>
           </figure>
+        </a>
+          <a href="#">
           <figure class="four">
             <div class="text-wrapper">
               <span>Pynt hjemmet med vores</span>
               <h2>Tilbehør</h2>
             </div>
           </figure>
+        </a>
         </section>
       </article>
     </main>
