--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/global.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/kasper.css">
     <script src="js/menu.js"></script>
   </head>
 
@@ -22,7 +22,7 @@
         <a href="#">KURV</a>
       </div>
       <!--Logo og navigationsbar-->
-      <div class="logo">
+      <a href="index.html"><div class="logo">
       	<svg version="1.1"
       	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
       	 x="0px" y="0px" width="384px" height="153.6px" viewBox="0 0 384 153.6" style="enable-background:new 0 0 384 153.6;"
@@ -63,12 +63,13 @@
       <!--Horizontal menu til desktop-->
     <nav class="desktopnav">
       <a class="active" href="index.html">Forside</a>
-      <a href="#">Om os</a>
-      <a href="#">Produkt 1</a>
-      <a href="#">Produkt 2</a>
-      <a href="#">Produkt 3</a>
+      <a href="om-os.html">Om os</a>
+      <a href="produkt1.html">Produkt 1</a>
+      <a href="produkt2.html">Produkt 2</a>
+      <a href="produkt3.html">Produkt 3</a>
     </nav>
   </div>
+</a>
 
 
 
@@ -78,10 +79,10 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <!--class="active" shows with page you are on-->
         <a class="active" href="index.html">Forside</a>
-        <a href="#">Om os</a>
-        <a href="#">Produkt 1</a>
-        <a href="#">Produkt 2</a>
-        <a href="#">Produkt 3</a>
+        <a href="om-os.html">Om os</a>
+        <a href="produkt1.html">Produkt 1</a>
+        <a href="produkt2.html">Produkt 2</a>
+        <a href="produkt3.html">Produkt 3</a>
       </nav>
 
     </header>
@@ -89,7 +90,7 @@
     <main>
 
       <figure class="header">
-        <h1>Fordi alle fortjener<br>et pænt hjem</h1>
+        <h1>Alle fortjener<br>et pænt hjem</h1>
       </figure>
       <article>
         <section>
