--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Forside</title>
+    <title>Relax Living - Forside</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/global.css">
@@ -22,7 +22,7 @@
         <a href="#">KURV</a>
       </div>
       <!--Logo og navigationsbar-->
-      <a href="index.html"><div class="logo">
+    <div class="logo">
       	<svg version="1.1"
       	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
       	 x="0px" y="0px" width="384px" height="153.6px" viewBox="0 0 384 153.6" style="enable-background:new 0 0 384 153.6;"
@@ -69,7 +69,6 @@
       <a href="produkt3.html">Produkt 3</a>
     </nav>
   </div>
-</a>
 
 
 
