--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <p>1234 København N</p>
       <div class="socialicon">
         <img src="img/002-facebook-logo-button.png" alt="Facebook">
-        <img src="img/001-social.png" alt="Instagram">
+        <a target="_blank" href="https://www.instagram.com/relaxliving17/"><img src="img/001-social.png" alt="Instagram"></a>
       </div>
     </div>
     </footer>
