--- a/produkt1.html
+++ b/produkt1.html
@@ -123,47 +123,48 @@
 
     <footer>
       <div class="logo">
-	<svg version="1.1"
-	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-	 x="0px" y="0px" width="384px" height="153.6px" viewBox="0 0 384 153.6" style="enable-background:new 0 0 384 153.6;"
-	 xml:space="preserve">
-<defs>
-</defs>
-<g>
-	<g>
-		<path d="M26.6,39.6h-24v29.6H0V0h22.1C29,0,34.5,1.8,38.6,5.4c4.1,3.6,6.2,8.4,6.2,14.6c0,4.7-1.5,8.8-4.4,12.4
-			c-2.9,3.5-6.7,5.7-11.2,6.6l18.5,29.6v0.7H45L26.6,39.6z M2.6,37h21.8c5.3,0,9.6-1.6,12.9-4.8c3.3-3.2,4.9-7.3,4.9-12.2
-			c0-5.4-1.8-9.6-5.4-12.7c-3.6-3.1-8.6-4.7-14.9-4.7H2.6V37z"/>
-		<path d="M95.9,34.9H61.2v31.8h39.5v2.6H58.6V0h42.1v2.6H61.2v29.8h34.7V34.9z"/>
-		<path d="M174.2,48.5h-33.9l-7.7,20.7h-2.8L155.7,0h3.1l25.9,69.2h-2.8L174.2,48.5z M141.2,46h32l-16-42.9L141.2,46z"/>
-		<path d="M218,31.9L240.3,0h3.2l-24,33.9l24.9,35.3h-3.2L218,35.9l-23.4,33.3h-3.1l24.9-35.3L192.4,0h3.2L218,31.9z"/>
-	</g>
-	<g>
-		<path d="M118.4,150.1h35.5v2.6h-38.1V83.4h2.6V150.1z"/>
-		<path d="M170.9,152.6h-2.6V83.4h2.6V152.6z"/>
-		<path d="M211.2,145.9l1.4,4.2l1.4-4.2l23.2-62.5h2.8l-25.9,69.2h-3.1l-25.9-69.2h2.8L211.2,145.9z"/>
-		<path d="M253.6,152.6H251V83.4h2.6V152.6z"/>
-		<path d="M320.3,152.6h-2.6l-44.7-64.8v64.8h-2.6V83.4h2.6l44.7,64.7V83.4h2.6V152.6z"/>
-		<path d="M384,145.2c-1.7,2.4-4.8,4.4-9.2,6c-4.4,1.6-9.2,2.4-14.4,2.4c-5.1,0-9.7-1.3-13.7-3.8c-4-2.5-7.2-6-9.4-10.6
-			c-2.3-4.6-3.4-9.7-3.5-15.5v-11.9c0-5.7,1.1-10.8,3.3-15.3c2.2-4.5,5.3-8,9.2-10.4c4-2.5,8.4-3.7,13.4-3.7
-			c6.9,0,12.5,1.8,16.8,5.3c4.3,3.5,6.8,8.3,7.5,14.4h-2.6c-0.9-5.5-3.2-9.7-6.9-12.7c-3.7-2.9-8.7-4.4-14.9-4.4
-			c-7,0-12.6,2.5-16.9,7.5c-4.3,5-6.4,11.5-6.4,19.6v11c0,5.4,1,10.3,3,14.5c2,4.2,4.8,7.5,8.5,9.9s7.9,3.5,12.6,3.5
-			c4.6,0,8.9-0.7,12.9-2c4-1.4,6.7-3,8.2-5v-20.2h-21.2v-2.6H384V145.2z"/>
-	</g>
-	<g>
-		<path d="M118.4,151.8h-2.6V0.1h2.6V151.8z"/>
-	</g>
-</g>
-</svg>
-</div>
+        <svg version="1.1"
+        	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+        	 x="0px" y="0px" width="384px" height="153.6px" viewBox="0 0 384 153.6" style="enable-background:new 0 0 384 153.6;"
+        	 xml:space="preserve">
+        <defs>
+        </defs>
+        <g>
+        	<g>
+        		<path d="M26.6,39.6h-24v29.6H0V0h22.1C29,0,34.5,1.8,38.6,5.4c4.1,3.6,6.2,8.4,6.2,14.6c0,4.7-1.5,8.8-4.4,12.4
+        			c-2.9,3.5-6.7,5.7-11.2,6.6l18.5,29.6v0.7H45L26.6,39.6z M2.6,37h21.8c5.3,0,9.6-1.6,12.9-4.8c3.3-3.2,4.9-7.3,4.9-12.2
+        			c0-5.4-1.8-9.6-5.4-12.7c-3.6-3.1-8.6-4.7-14.9-4.7H2.6V37z"/>
+        		<path d="M95.9,34.9H61.2v31.8h39.5v2.6H58.6V0h42.1v2.6H61.2v29.8h34.7V34.9z"/>
+        		<path d="M174.2,48.5h-33.9l-7.7,20.7h-2.8L155.7,0h3.1l25.9,69.2h-2.8L174.2,48.5z M141.2,46h32l-16-42.9L141.2,46z"/>
+        		<path d="M218,31.9L240.3,0h3.2l-24,33.9l24.9,35.3h-3.2L218,35.9l-23.4,33.3h-3.1l24.9-35.3L192.4,0h3.2L218,31.9z"/>
+        	</g>
+        	<g>
+        		<path d="M118.4,150.1h35.5v2.6h-38.1V83.4h2.6V150.1z"/>
+        		<path d="M170.9,152.6h-2.6V83.4h2.6V152.6z"/>
+        		<path d="M211.2,145.9l1.4,4.2l1.4-4.2l23.2-62.5h2.8l-25.9,69.2h-3.1l-25.9-69.2h2.8L211.2,145.9z"/>
+        		<path d="M253.6,152.6H251V83.4h2.6V152.6z"/>
+        		<path d="M320.3,152.6h-2.6l-44.7-64.8v64.8h-2.6V83.4h2.6l44.7,64.7V83.4h2.6V152.6z"/>
+        		<path d="M384,145.2c-1.7,2.4-4.8,4.4-9.2,6c-4.4,1.6-9.2,2.4-14.4,2.4c-5.1,0-9.7-1.3-13.7-3.8c-4-2.5-7.2-6-9.4-10.6
+        			c-2.3-4.6-3.4-9.7-3.5-15.5v-11.9c0-5.7,1.1-10.8,3.3-15.3c2.2-4.5,5.3-8,9.2-10.4c4-2.5,8.4-3.7,13.4-3.7
+        			c6.9,0,12.5,1.8,16.8,5.3c4.3,3.5,6.8,8.3,7.5,14.4h-2.6c-0.9-5.5-3.2-9.7-6.9-12.7c-3.7-2.9-8.7-4.4-14.9-4.4
+        			c-7,0-12.6,2.5-16.9,7.5c-4.3,5-6.4,11.5-6.4,19.6v11c0,5.4,1,10.3,3,14.5c2,4.2,4.8,7.5,8.5,9.9s7.9,3.5,12.6,3.5
+        			c4.6,0,8.9-0.7,12.9-2c4-1.4,6.7-3,8.2-5v-20.2h-21.2v-2.6H384V145.2z"/>
+        	</g>
+        	<g>
+        		<path d="M118.4,151.8h-2.6V0.1h2.6V151.8z"/>
+        	</g>
+        </g>
+        </svg>
+      </div>
+
       <!--Kontakt info-->
     <div class="kontakt">
-      <p class="name">Relax Living</p>
-      <p>Vejnavn 19</p>
-      <p>1234 København N</p>
+      <p class="name">Relax Living<br>
+      Vejnavn 19<br>
+      1234 København N</p>
       <div class="socialicon">
         <img src="img/002-facebook-logo-button.png" alt="Facebook">
-        <img src="img/001-social.png" alt="Instagram">
+        <a target="_blank" href="https://www.instagram.com/relaxliving17/"><img src="img/001-social.png" alt="Instagram"></a>
       </div>
     </div>
     </footer>
